--- a/src/app/_user/register/register.component.html
+++ b/src/app/_user/register/register.component.html
@@ -3,6 +3,12 @@
         <h2 class="text-2xl font-semibold mb-6 text-center bg-gray-100 p-2 text-gray-600">Register</h2>
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
+            <div *ngIf="errors.length > 0" class="bg-red-100 text-center p-1 mb-2">
+                <ng-container *ngFor="let error of errors">
+                    <li class="text-red-500 font-semibold text-sm">{{error}}</li>
+                </ng-container>
+            </div>
+
             <div class="flex gap-x-2">
 
                 <div class="mb-4">
